--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "ejs": "^2.3.1",
     "express": "^4.12.3",
     "express-flash": "0.0.2",
+    "express-session": "^1.11.3",
     "express-validator": "^2.11.0",
-    "flash": "^1.1.0",
-    "mongoose": "^4.0.2",
+    "mongoose": "^4.0.5",
     "multer": "^0.1.8",
-    "passport": "^0.2.1",
+    "nodemailer": "^1.3.4",
+    "passport": "^0.2.2",
+    "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.3",
     "path": "^0.11.14",
     "validator": "^3.40.1"
   }
