--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.12.3",
+    "bson": "^0.4.6",
     "compression": "^1.4.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.5",
@@ -20,6 +21,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.11.3",
     "express-validator": "^2.11.0",
+    "mongo": "^0.1.0",
     "mongoose": "^4.0.5",
     "multer": "^0.1.8",
     "nodemailer": "^1.3.4",
