--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bson": "^0.4.6",
     "compression": "^1.4.3",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^0.8.1",
     "cookie-parser": "^1.3.5",
     "crypto": "0.0.3",
     "ejs": "^2.3.1",
