--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.11.3",
     "express-validator": "^2.11.0",
     "mongo": "^0.1.0",
+    "mongo-sanitize": "^1.0.0",
     "mongoose": "^4.0.5",
     "multer": "^0.1.8",
     "nodemailer": "^1.3.4",
