--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^4.0.5",
     "multer": "^0.1.8",
     "nodemailer": "^1.3.4",
+    "numeral": "^1.5.3",
     "passport": "^0.2.2",
     "passport-facebook": "^2.0.0",
     "passport-local": "^1.0.0",
