--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "name": "Squiggle",
+  "name": "Fly Cards",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
-  "author": "Greg DiPietro",
-  "license": "ISC",
+  "author": {
+    "name": "Greg DiPietro",
+    "twitter": "@hardboiledgregs",
+    "email": "gjdipietro@gmail.com"
+  },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.12.3",
